# rammap

./: Cargo.toml  README.md
docs/: architecture.md  performance.md  wasm.md
examples/: simple_align.rs
rammap/: Cargo.toml
rammap-core/: Cargo.toml
rammap-core/examples/: dp_align.rs
rammap-core/src/: api.rs  lib.rs
rammap-core/src/align/: align_simple.rs  chain.rs  chain_rmq.rs  chain_simd.rs  chain_simple.rs  env_flags.rs  extend.rs  filter.rs  index_bucket.rs  jump.rs  junc.rs  map.rs  mod.rs  pair.rs  pipeline.rs  seed.rs  sketch.rs  sort.rs  split.rs  stats.rs  strobemer.rs  syncmer.rs  wasm_lib.rs
rammap-core/src/align/dp/: common.rs  dual.rs  lw.rs  mod.rs  single.rs  splice.rs
rammap-core/src/fasta/: mod.rs  record.rs
rammap/src/: main.rs
scripts/: build-wasm-threads.sh  build-wasm.sh  serve.py
src/: api.rs  main.rs
src/align/: chain.rs  chain_simd.rs  extend.rs  index.rs  index_bucket.rs  map.rs  pipeline.rs  wasm_lib.rs
src/align/dp/: common.rs  dual.rs  lw.rs  mod.rs  single.rs  splice.rs
src/fasta/: reader.rs  stream.rs
web/: index.html  worker.js
