[workspace]
resolver = "2"
members = ["rammap-core", "rammap"]

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jwanglab/rammap"
# Shared across both crates; the path is resolved relative to the workspace root.
readme = "README.md"

# Shared release profile (applies to all workspace members).
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
