[package]
name = "rammap-core"
description = "Core alignment/read-mapping library for rammap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# the crate is imported as `rammap`
[lib]
name = "rammap"
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]
wasm-threads = ["rayon", "wasm-bindgen-rayon"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
bitflags = "2"
rustc-hash = "2"
hashbrown = { version = "0.15", features = ["serde"] }
byteorder = "1"

rayon = { version = "1", optional = true, features = ["web_spin_lock"] }

flate2 = "1"
memchr = "2"

log = "0.4"
thiserror = "2"
anyhow = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"
wasm-bindgen = "0.2"
wasm-bindgen-rayon = { version = "1.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
